--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=false
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
+# check these on https://fabricmc.net/develop
 	minecraft_version=b1.7.3
 	yarn_mappings=b1.7.3+a00e3b0
 	loader_version=0.14.24-babric.1
+	java_version=17
 
 # Mod Properties
-	mod_version=1.0.0
-	maven_group=com.example
-	archives_base_name=fabric-example-mod
+	mod_version=0.1.0
+	maven_group=com.kydzombie
+	archives_base_name=skadoodle
 
 # Dependencies
 	stapi_version=2.0-alpha.1
@@ -20,3 +21,4 @@ org.gradle.daemon=false
 	gcapi_version=1.1.6
 	howmanyitems_version=5.0.13
 	modmenu_version=v1.8.5-beta.3
+	fabric_language_kotlin=1.10.12+kotlin.1.9.20
